<resources>
    <string name="app_name">IoT Enters Home</string>
    <string name="welcome">Welcome</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="please_register">Please register</string>
    <string name="last_name">Last name</string>
    <string name="confirm_email">Confirm email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_email">Enter email</string>
    <string name="heating">Heating</string>
    <string name="lighting">Lighting</string>
    <string name="preferences">Preferences</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
</resources>
